--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -30,3 +30,7 @@
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
 }
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
