--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -6,11 +6,12 @@
 <h2>Create</h2>
 @using (Html.BeginForm("Create", "Gigs"))
 {
+    <p class="alert alert-info">All fields are <strong>required</strong></p>
     @Html.AntiForgeryToken()
     <form>
         <div class="form-group">
             @Html.LabelFor(m => m.Venue)
-            @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Venue, new { @class = "form-control",autofocus="autofocus" })
             @Html.ValidationMessageFor(m=>m.Venue)
         </div>
         <div class="form-group">
