--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 90px;
     padding-bottom: 20px;
     font-size: 17px;
 }
@@ -10,8 +10,8 @@
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
+/* Override the default bootstrap behavior where horizontal description lists
+   will truncate terms that are too long to fit in the left column
 */
 .dl-horizontal dt {
     white-space: normal;
@@ -24,7 +24,6 @@ textarea {
     max-width: 280px;
 }
 
-
 .navbar-inverse {
     background-color: #ff4342;
     border-color: #ff4342;
@@ -33,7 +32,6 @@ textarea {
     .navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand {
         color: #ffffff;
     }
-
 
 body,
 h1,
@@ -48,12 +46,13 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family:Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .form-group {
     margin-bottom: 20px;
 }
+
 .form-control {
     font-size: 17px;
     padding: 20px 15px;
@@ -61,18 +60,18 @@ h6,
     border-radius: 9px;
 }
 
-.form-control:focus {
-    border-color: #2196f3;
-    box-shadow:none;
-    -webkit-box-shadow: none;
-}
+    .form-control:focus {
+        border-color: #2196f3;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+    }
+
 .btn {
     font-size: 17px;
     -ms-border-radius: 9px;
     border-radius: 9px;
     padding: 7px 20px;
 }
-
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
     color: #ffffff;
@@ -83,6 +82,7 @@ h6,
     border-top-color: #fff;
     border-bottom-color: #fff;
 }
+
 .navbar-brand {
     font-weight: 700;
 }
@@ -91,3 +91,50 @@ span.field-validation-error {
     color: red;
     font-weight: bold;
 }
+
+.gigs {
+    list-style: none;
+}
+
+    .gigs > li {
+        position: relative;
+        margin-bottom: 30px;
+    }
+
+        .gigs > li .date {
+            background: red;
+            color: white;
+            text-align: center;
+            width: 60px;
+            -ms-border-radius: 8px;
+            border-radius: 8px;
+        }
+
+            .gigs > li .date .month {
+                text-transform: uppercase;
+                font-size: 14px;
+                font-weight: bold;
+                padding: 2px 6px;
+            }
+
+            .gigs > li .date .day {
+                background: #f7f7f7;
+                color: #333;
+                font-size: 20px;
+                padding: 6px 12px;
+            }
+
+        .gigs > li .details {
+            position: absolute;
+            top: 0;
+            left: 70px;
+        }
+
+            .gigs > li .details .artist {
+                font-weight: bold;
+                display: block;
+            }
+
+            .gigs > li .details .genre {
+                font-size: 15px;
+            }
