--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -67,8 +67,8 @@ h6,
     }
 
 .btn {
-    font-size: 17px;
-    -ms-border-radius: 9px;
+    /*font-size: 17px;
+    -ms-border-radius: 9px;*/
     border-radius: 9px;
     padding: 7px 20px;
 }
