--- a/GigHub/GigHub/Views/Home/Index.cshtml
+++ b/GigHub/GigHub/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<GigHub.Models.Gig>
+﻿@model GigHub.ViewModel.HomeViewModel
 @{
     ViewBag.Title = "Home Page";
 }
 
 <ul class="gigs">
-    @foreach (var gig in Model)
+    @foreach (var gig in Model.UpcomingGigs)
     {
         <li>
             <div class="date">
@@ -12,9 +12,17 @@
                 <div class="day">@gig.DateTime.ToString("d ")</div>
             </div>
             <div class="details">
-                <span class="artist">@gig.Artist.Name</span>
+                <span class="artist">@gig.Artist.Name 
+                @if (Model.ShowActions)
+                {
+                    <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
+                }</span>
                 <span class="genre">@gig.Genre.Name</span>
-                <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toogle-attendances">Going?</button>
+                @if (Model.ShowActions)
+                {
+                    <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toogle-attendances">Going?</button>
+                    
+                }
             </div>
         </li>
 
@@ -33,7 +41,19 @@
                 }).fail(function() {
                     alert("Something failed");
                 });
-        });
+            });
+
+
+            $(".js-toggle-follow").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                    .done(function () {
+                        button.text("Following");
+                    })
+                    .fail(function () {
+                        alert("Something failed");
+                    });
+            });
     });
     </script>
 }
