--- a/GigHub/GigHub/Views/Gigs/GigForm.cshtml
+++ b/GigHub/GigHub/Views/Gigs/GigForm.cshtml
@@ -1,18 +1,19 @@
 ﻿@model GigHub.ViewModel.GigFormViewModel
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = Model.Heading;
 }
 
-<h2>Create</h2>
-@using (Html.BeginForm("Create", "Gigs"))
+<h2>@Model.Heading</h2>
+@using (Html.BeginForm(Model.Action, "Gigs"))
 {
     <p class="alert alert-info">All fields are <strong>required</strong></p>
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.Id)
     <form>
         <div class="form-group">
             @Html.LabelFor(m => m.Venue)
-            @Html.TextBoxFor(m => m.Venue, new { @class = "form-control",autofocus="autofocus" })
-            @Html.ValidationMessageFor(m=>m.Venue)
+            @Html.TextBoxFor(m => m.Venue, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.Venue)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Date)
