--- a/GigHub/GigHub/Views/Gigs/Mine.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Mine.cshtml
@@ -17,7 +17,9 @@
                 <span class="artist">@gig.Venue</span>
                 <span class="genre">@gig.Genre.Name</span>
             </div>
+            <div class="actions">
+                <a href="@Url.Action("Edit", "Gigs", new { id = gig.Id })">Edit</a>
+            </div>
         </li>
-
     }
 </ul>
