Basic CRUD - Implementing the Delete

--- a/GigHub/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/GigHub/Views/Shared/Gigs.cshtml
@@ -12,16 +12,22 @@
                 <div class="day">@gig.DateTime.ToString("d ")</div>
             </div>
             <div class="details">
-                <span class="artist">@gig.Artist.Name 
-                @if (Model.ShowActions)
+                <span class="artist">
+                    @gig.Artist.Name
+                    @if (gig.IsCanceled)
                 {
-                    <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
-                }</span>
+                        <label class="label label-warning">Canceled</label>
+                    }
+                    @if (Model.ShowActions)
+                {
+                        <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
+                    }
+                </span>
                 <span class="genre">@gig.Genre.Name</span>
-                @if (Model.ShowActions)
+                @if (Model.ShowActions && !gig.IsCanceled)
                 {
                     <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toogle-attendances">Going?</button>
-                    
+
                 }
             </div>
         </li>
@@ -32,17 +38,16 @@
 {
 
     <script>
-        $(document).ready(function() {
-            $('.js-toogle-attendances').click(function(e) {
-                    var button = $(e.target);
-                    $.post("/api/attendances",{ gigId :button.attr("data-gig-id")} )
-                .done(function() {
-                    button.removeClass("btn-default").addClass("btn-info").text("Going");
-                }).fail(function() {
-                    alert("Something failed");
-                });
+        $(document).ready(function () {
+            $('.js-toogle-attendances').click(function (e) {
+                var button = $(e.target);
+                $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
+                    .done(function () {
+                        button.removeClass("btn-default").addClass("btn-info").text("Going");
+                    }).fail(function () {
+                        alert("Something failed");
+                    });
             });
-
 
             $(".js-toggle-follow").click(function (e) {
                 var button = $(e.target);
@@ -54,6 +59,6 @@
                         alert("Something failed");
                     });
             });
-    });
+        });
     </script>
 }
